# PRS

PRS_Template/: CMakeLists.txt  lab1.cpp  main.cpp
PRS_Template/common/include/: common.h
PRS_Template/common/src/: common.cpp
PRS_Template/core/include/: Coordinates.h  Log.h  Models.h
PRS_Template/core/src/: Coordinates.cpp  Models.cpp
lab_1/: main.cpp
